some icon and signup layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
 
         <activity android:name=".account.ForgetPwdActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+
+        <activity android:name=".account.SignUpActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
     </application>
 
 </manifest>
