rename package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.zhou.dress"
+        applicationId "com.dudress.dress"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
