--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zhou.dress">
+    package="com.dudress.dress">
 
 
     <!-- Include following permission if you load images from Internet -->
@@ -9,14 +9,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".DressApplication"
+        android:name="com.dudress.dress.DressApplication"
         android:allowBackup="true"
         android:icon="@mipmap/dress_128px"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.dudress.dress.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,21 +24,21 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".account.LoginActivity"
+        <activity android:name="com.dudress.dress.account.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
-        <activity android:name=".account.ForgetPwdActivity"
+        <activity android:name="com.dudress.dress.account.ForgetPwdActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
-        <activity android:name=".account.SignUpActivity"
+        <activity android:name="com.dudress.dress.account.SignUpActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-        <activity android:name=".account.SignUpEmailCodeActivity"
+        <activity android:name="com.dudress.dress.account.SignUpEmailCodeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
-        <activity android:name=".guideshow.GuideActivity"
+        <activity android:name="com.dudress.dress.guideshow.GuideActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 
