--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Mar 11 21:05:58 CST 2016
-
+#Fri Apr 01 16:57:54 CST 2016
+android.useDeprecatedNdk=true
