增加开源包ButterKnife的支持 增加一个新页面：PageActivity 目前该页面只完成了一个页头；后序需要加上一个GridView 加载更多

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity
             android:name=".setting.SettingActivity"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".detail.PageActivity" android:screenOrientation="portrait"></activity>
 
     </application>
 
