--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.google.code.gson:gson:2.6.2'
     compile files('src/main/libs/guideshowlib.jar')
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.tencent.bugly:crashreport:latest.release'
 }
