--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+
+
+        <meta-data android:name="DATABASE" android:value="du.db" />
+        <meta-data android:name="VERSION" android:value="2" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.dudress.dress.db.models" />
+
+
+
         <activity
-            android:name="com.dudress.dress.MainActivity"
+            android:name=".activities.MainActivity"
             android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,22 +40,22 @@
         </activity>
 
         <activity
-            android:name="com.dudress.dress.account.Login1Activity"
+            android:name=".activities.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"></activity>
 
         <activity
-            android:name="com.dudress.dress.account.ForgetPwdActivity"
+            android:name=".activities.ForgetPwdActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
 
         <activity
-            android:name="com.dudress.dress.account.SignUpActivity"
+            android:name=".activities.SignUpActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"></activity>
         <activity
-            android:name="com.dudress.dress.account.SignUpEmailCodeActivity"
+            android:name=".activities.SignUpEmailCodeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity
