--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dudress.dress">
+    package="com.dudress.main">
 
 
     <!-- Include following permission if you load images from Internet -->
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
-        android:name=".DressApplication"
+        android:name="com.dudress.main.DressApplication"
         android:allowBackup="true"
         android:icon="@mipmap/du_dress_icon_108"
         android:label="@string/app_name"
@@ -36,7 +36,7 @@
 
 
         <activity
-            android:name=".activities.AccountFaceEditActivity"
+            android:name="com.dudress.main.ui.activities.PublicationActivity"
             android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,34 +46,38 @@
         </activity>
 
         <activity
-            android:name=".activities.LoginActivity"
+            android:name="com.dudress.main.ui.activities.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
 
         <activity
-            android:name=".activities.ForgetPwdActivity"
+            android:name="com.dudress.main.ui.activities.ForgetPwdActivity"
             android:screenOrientation="portrait"></activity>
 
         <activity
-            android:name=".activities.SignUpActivity"
+            android:name="com.dudress.main.ui.activities.SignUpActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"></activity>
         <activity
-            android:name=".activities.SignUpEmailCodeActivity"
+            android:name="com.dudress.main.ui.activities.SignUpEmailCodeActivity"
             android:screenOrientation="portrait"></activity>
         <activity
-            android:name="com.dudress.dress.guideshow.GuideActivity"
+            android:name="com.dudress.main.guideshow.GuideActivity"
             android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".setting.SettingActivity"
+            android:name="com.dudress.main.ui.activities.SettingActivity"
             android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".detail.PageActivity"
+            android:name="com.dudress.main.ui.activities.PageActivity"
             android:screenOrientation="portrait"></activity>
 
         <!--
                 <activity android:name=".activities.AccountFaceEditActivity"></activity>
         -->
+<!--
+        <activity android:name=".ui.activities.PublicationActivity"
+            android:screenOrientation="portrait"></activity>
+-->
 
     </application>
 
